--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["<", "${fileDirname}\\input.txt"]
+            "args": ["<", "${fileDirname}\\example.txt"]
         }
     ]
 }
